Use valueOf()
- Use final